--- a/examples/ai-explorer/package.json
+++ b/examples/ai-explorer/package.json
@@ -18,19 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ai": "^4.3.5",
-    "@google/generative-ai": "^0.14.0",
     "@ai-sdk/google": "^1.2.10",
+    "@google/generative-ai": "^0.24.0",
+    "ai": "^4.3.5",
+    "desktop-use": "file:../../ts-sdk",
     "dotenv": "^16.4.5",
-    "zod": "^3.23.8",
-    "inquirer": "^9.2.23",
+    "inquirer": "^12.5.2",
     "node-fetch": "^3.3.2",
-    "desktop-use": "file:../../ts-sdk"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
     "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.14.1",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   }
-} 
+}
