--- a/mcp/package.json
+++ b/mcp/package.json
@@ -20,7 +20,8 @@
         "dotenv": "^16.4.5",
         "zod": "^3.23.8",
         "yargs": "^17.7.2",
-        "desktop-use": "latest"
+        "desktop-use": "latest",
+        "axios": "^1.6.7"
     },
     "devDependencies": {
         "@types/node": "^20.14.2",
